--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.5.0",
+    "mongoose": "^7.5.0",
+    "nodemon": "^3.0.1",
+    "telegraf": "^4.12.2"
+  }
 }
